Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1708

Using tr-pass port option causes requests with large headers to hang

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.2
    • HTTP
    • None

    Description

      When tr-pass is enabled and a request comes in on a new connection with total size of request headers > 4K it will hang in the parser (and never time out).

      In order to support tr-pass, we clone the ua_buffer_reader, but until the parser decides the request is valid/invalid, we do not consume data from the clone. Eventually, the underlying iobuffer fills up and the parser won't be called with the rest of the pending data.

      Attachments

        Issue Links

          Activity

            People

              ushachar Uri Shachar
              ushachar Uri Shachar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: