TS-1708: Using tr-pass port option causes requests with large headers to hang

If 4KB of headers are read and we haven't decided on requets validity yet, disregard
tr-pass option in order to avoid blocking the writer